# Gallery2

app/: build.gradle
app/src/androidTest/java/cn/noblel/gallery2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/filters/: CMakeLists.txt  fx.c
app/src/main/cpp/jpegstream/: CMakeLists.txt
app/src/main/cpp/jpegstream/src/: jpeg_hook.h  jpeg_reader.cpp  jpeg_reader.h  jpeg_writer.h
app/src/main/java/com/android/camera/: CameraActivity.java
app/src/main/java/com/android/gallery3d/anim/: Animation.java  StateTransitionAnimation.java
app/src/main/java/com/android/gallery3d/app/: AbstractGalleryActivity.java  ActivityState.java  AlbumDataLoader.java  AlbumPage.java  AlbumPicker.java  AlbumSetDataLoader.java  AlbumSetPage.java  AppBridge.java  BatchService.java  CommonControllerOverlay.java  Config.java  DialogPicker.java  EyePosition.java  Gallery.java  GalleryActionBar.java  GalleryActivity.java  GalleryApp.java  GalleryAppImpl.java  GalleryContext.java  ManageCachePage.java  MovieActivity.java  MoviePlayer.java  MuteVideo.java  OrientationManager.java  PackagesMonitor.java  PanoramaMetadataSupport.java  PhotoDataAdapter.java  PhotoPage.java  PhotoPageBottomControls.java  PhotoPageProgressBar.java  PickerActivity.java  SinglePhotoDataAdapter.java  SlideshowDataAdapter.java  SlideshowPage.java  StateManager.java  TimeBar.java  TrimControllerOverlay.java  TrimTimeBar.java  TrimVideo.java  VideoUtils.java  (+1 more)
app/src/main/java/com/android/gallery3d/common/: ApiHelper.java  (+7 more)
app/src/main/java/com/android/photos/: AlbumFragment.java  AlbumSetFragment.java  BitmapRegionTileSource.java  GalleryActivity.java  MultiChoiceManager.java  MultiSelectGridFragment.java  PhotoSetFragment.java  SelectionManager.java
app/src/main/res/drawable/: filtershow_style_circle.xml  filtershow_style_curve.xml  filtershow_style_line.xml  filtershow_style_rectangle.xml
app/src/main/res/layout/: filtershow_control_style_chooser.xml  filtershow_editor_panel.xml
app/src/main/res/values/: filtershow_strings.xml  strings.xml
app/src/main/res/values-zh-rCN/: filtershow_strings.xml  strings.xml
app/src/test/java/cn/noblel/gallery2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+283 files in other folders)
